  Also INTERMediatorLog.warningMessagePrevent can stop the alert box with setting to true, and the default is false.
- In case of Messaging errors, the Warning Messages are set instead of error messages.
- On the post only mode, if there is no data to send, the communication is going to prevent.
  If IMLibUI.postOnlyNoRecordPrevent set to false, it doesn't prevent in case of no data.

Ver.8 (July 22, 2021)
- [Important] If you see the message which tells the ServiceServer couldn't boot just after installation,
  the best practice is install the Node.js on your operating system.

- The password hash for authentication moves to SHA-256 based hash, and it has the interoperability with SHA-1 hash.
- The 'storing' key in 'authentication' key can have the value 'credential', and it stores critical information
  in the http-only cookie and any information about authentication can't read from JavaScript.
- The $migrateSHA1to2 variable can moved to SHA-256 hash from SHA-1 hash without changing the password.
- The length of the challenge doubled to 24 byte from 12.
- Check the DB schema for authentication in case of debug mode. It checks character length of fields.
- SAML is integrated with SimpleSAMLphp. The $isSAML variable in params.php has to be set true, also set $samlAuthSource,
  and setting information exists in sample/saml-config directory.
- If the variable $samlWithBuiltInAuth in params.php set true, the built-in authentication works first and moves to SAML.
- If the variable $samlAttrRules in params.php, it can customize to extract information from the SAML attributes.
- If the variable $samlAdditionalRules in params.php, it requires to match with the key and regex pattern.
- Custom url for after clicking logout button of the page navigation can set to INTERMediatorOnPage.logoutURL.
- Support handling Claris FileMaker's checkbox set feature on Post Only mode when using DB_FileMaker_DataAPI class or DB_FileMaker_FX class (Thanks to Mr. Masakatsu Inamoto).